Opened 5 years ago
Closed 4 years ago
#9596 closed defect (fixed)
DASH webm ondemand profile does not conform to specification
| Reported by: | Ilya Kalashnikov | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | DASH webm |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
ffmpeg generates DASH webm manifests with the following profile: urn:webm:dash:profile:webm-on-demand:2012 as hardcoded in libavformat/webmdashenc.c.
This file references the documentation at https://sites.google.com/a/webmproject.org/wiki/adaptive-streaming/webm-dash-specification
That very documentation however says the profile should be: urn:mpeg:dash:profile:webm-on-demand:2012.
Note the difference in second word, webm vs mpeg.
Why does ffmpeg contradicts the documentation it is apparently based on?
I believe the profile should be as specified in the spec, but at the same changing fffmpeg behavior is likely to be a serious breaking change as clients might rely on ffmpeg version of the profile.



Fixed in 487b49d8f2e1e81dce86230fc957ca2ee9de00ee.